runtime/repl: add WAIT and WAITAOF command surface with deterministic threshold evaluation
Implements a spec-first replication parity increment for the runtime command surface:\n- wires WAIT and WAITAOF as runtime-special commands\n- adds replication ack/fsync runtime state and deterministic evaluator-backed handlers\n- uses fr-repl evaluate_wait/evaluate_waitaof to compute threshold outcomes\n- tracks synthetic primary/fsync offsets for successful write-like commands\n\nValidation and parity artifacts:\n- extends FR-P2C-006 replication journey fixture with WAIT baseline case\n- adds runtime unit coverage for WAIT/WAITAOF arity, integer validation, and threshold semantics\n- updates fr-runtime crate manifest/lock for new fr-repl dependency edge\n\nVerification run:\n- cargo fmt --check\n- rch exec -- cargo check --workspace --all-targets\n- rch exec -- cargo clippy --workspace --all-targets -- -D warnings\n- rch exec -- cargo test -p fr-runtime -- --nocapture\n- rch exec -- cargo test -p fr-conformance -- --nocapture\n\nTraceability:\n- bead: bd-3pho\n- mail thread: br-3pho

--- a/crates/fr-runtime/Cargo.toml
+++ b/crates/fr-runtime/Cargo.toml
@@ -9,4 +9,5 @@ fr-config = { version = "0.1.0", path = "../fr-config" }
 fr-eventloop = { version = "0.1.0", path = "../fr-eventloop" }
 fr-persist = { version = "0.1.0", path = "../fr-persist" }
 fr-protocol = { version = "0.1.0", path = "../fr-protocol" }
+fr-repl = { version = "0.1.0", path = "../fr-repl" }
 fr-store = { version = "0.1.0", path = "../fr-store" }
