--- a/crates/fr-conformance/Cargo.toml
+++ b/crates/fr-conformance/Cargo.toml
@@ -11,3 +11,4 @@ fr-repl = { version = "0.1.0", path = "../fr-repl" }
 fr-runtime = { version = "0.1.0", path = "../fr-runtime" }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
+sha2 = "0.10.9"
